<resources>
    <string name="app_name">"Helsinki Tour app"</string>
    <string name="name">placeName</string>
    <string name="address">placeAddress</string>
    <string name="desc">placeDescription</string>
    <string name="img">placeImage</string>
    <string name="url">placeUrl</string>
    <string name="loc">placeLocation</string>
    <string name="Helsinki_cathedral_name">Helsinki Cathedral</string>
    <string name="Helsinki_cathedral_address">Senate Square, Helsinki</string>
    <string name="Helsinki_cathedral_desc">The Cathedral, by Carl Ludvig Engel, rising on the northern side of the Senate Square is the stage of national and academic festive services and one of the most popular tourist sights. The church is part of Helsinki\'s Empire era centre and a landmark for those arriving by sea. It has become the symbol of the whole of Helsinki. </string>
    <string name="Helsinki_cathedral_url">http://www.helsinginkirkot.fi/en/churches/cathedral</string>
    <string name="Suomenlinna_name">Fortress of Suomenlinna</string>
    <string name="Suomenlinna_address">Suomenlinna C1, Helsinki</string>
    <string name="Suomenlinna_desc">Situated on a group of islands off Helsinki, Suomenlinna was built during the Swedish era as a maritime fortress and a base for the Archipelago Fleet. Work on the fortress began in 1748.</string>
    <string name="Suomenlinna_url">http://www.suomenlinna.fi/en/</string>
    <string name="Zoo_name">Helsinki Zoo</string>
    <string name="Zoo_address">Mustikkamaanpolku 12</string>
    <string name="Zoo_desc">Helsinki Zoo is home to 150 animal species and almost 1000 plant species that show the diversity of nature. Helsinki Zoo is one of the few zoos located on an island. It is the perfect place to visit due to its natural environment, animals and history. The zoo was established already in 1889 and this makes it one of the oldest zoos in the world. Helsinki Zoo also participates in the work to protect the habitats in the original homes of the various species. Helsinki Zoo´s mission is to work towards preserving biodiversity</string>
    <string name="Zoo_url">http://www.korkeasaari.fi/helsinki-zoo/</string>
    <string name="Linnanmaki_name">Linnanmäki amusement park</string>
    <string name="Linnanmaki_address">Tivolikuja 1, Helsinki</string>
    <string name="Linnanmaki_desc">Linnanmäki amusement park was founded in 1950 by six child welfare organisations. In 1957 the six organisations created the Children’s Day Foundation.</string>
    <string name="Linnanmaki_url">https://www.linnanmaki.fi/en</string>
    <string name="Olympic_stadium_name">Helsinki Olympic Stadium - Olympiastadion</string>
    <string name="Olympic_stadium_address">Radiokatu 20, Helsinki</string>
    <string name="Olympic_stadium_desc">The Stadium Foundation, established 1927, started to implement that dream, and their first and foremost task was to get a stadium built, which would permit Helsinki to host the Summer Olympics. Building began on February 12, 1934, and the Stadium was inaugurated on June 12, 1938. Since its completion the Stadium has undergone eight important stages of development. The most important was the total modernization 1990–1994. At its maximum, in 1952, the Stadium accommodated 70 000 spectators. Today, the number of spectator places, all of them seats, is 39 000.</string>
    <string name="Olympic_stadium_url">http://www.stadion.fi/helsinki-olympic-stadium/</string>
    <string name="Parliament_name">Parliament house</string>
    <string name="Parliament_address">Mannerheimintie 30</string>
    <string name="Parliament_desc">Finland\'s 200–seat parliament gathers in this impressive building representing 1920s Classicism. The facade of the building is made of red granite from Kalvola. The main facade includes 14 Corinthian columns. In the Little Parliament (Arkadiankatu 3), an annex on the left side of the actual Parliament building, operates Visitors\' Centre where you can find information about the Parliament and about the European Union. Open Mon–Fri 10-16. A café is also located at the Visitors\' Centre.</string>
    <string name="Parliament_url">https://en.wikipedia.org/wiki/Parliament_House,_Helsinki</string>
    <string name="Sky_wheel_name">Sky wheel Helsinki</string>
    <string name="Sky_wheel_address">Katajannokanlaituri 2, Helsinki </string>
    <string name="Sky_wheel_desc"> SkyWheel Helsinki, located in Katajanokka, is a 40-meter high observation wheel that provides a 360° view of Helsinki and its most important surrounding attractions. Possible to also book a VIP-gondola or sauna-gondola.</string>
    <string name="Sky_wheel_url">http://www.visithelsinki.fi/en/see-and-experience/sights-and-attractions/skywheel-helsinki</string>
    <string name="ateneum_name">Ateneum art museum</string>
    <string name="ateneum_address">Kaivokatu 2, Helsinki</string>
    <string name="ateneum_desc">The Ateneum is Finland\’s best-known art museum and the home of Finnish art. The images held by the Ateneum are ingrained in the collective memory of the Finnish people: the beloved works in Ateneum’s collections date from the period from the 19th century to the modern age. The hugely popular exhibitions of Finnish and international art open up new perspectives into the past and the future. The guest stars of the temporary exhibitions have included names such as Tove Jansson, Carl Larsson, Pablo Picasso and Helene Schjerfbeck.</string>
    <string name="ateneum_url">http://www.ateneum.fi/?lang=en</string>
    <string name="kiasma_name">Museum of Contemporary Art Kiasma</string>
    <string name="kiasma_address">Mannerheiminaukio 2, Helsinki</string>
    <string name="kiasma_desc">Kiasma is a museum of contemporary art under the umbrella of the Finnish National Gallery. The basic functions of the museum are organising changing exhibitions and augmenting its collection, along with research and presentation of the works. The primary focus in the museum collection is on Finnish contemporary art. The collection is also supplemented by commissioning new work. The collection is presented to the public in annually changing thematic exhibitions. Kiasma was designed by the American architect Steven Holl and opened to the public in 1998. At Kiasma there\'s also a museum shop and café.</string>
    <string name="kiasma_url">http://www.kiasma.fi/en/</string>
    <string name="seurasaari_name">Seurasaari Open-Air Museum</string>
    <string name="seurasaari_address">Seurasaari, Helsinki</string>
    <string name="seurasaari_desc">The Seurasaari open-air museum of is located on a beautiful green island just a few kilometres from the heart of Helsinki. The island is a tranquil oasis in the midst of the city and at the museum, open in summer, the traditional Finnish way of life is displayed in the cottages, farmsteads and manors of the past four centuries that have been relocated from all around Finland. A summer café and museum shop are open according to museum opening hours. The island provides a nice setting for outdoor recreation all year. The tame birds and squirrels welcome everybody. At the island you\'ll also find Restaurant Seurasaari, kiosks and a beach. Barbecueing is possible at the grill by the Festival Ground kiosk.</string>
    <string name="seurasaari_url">http://www.kansallismuseo.fi/en/seurasaari-openairmuseum</string>
    <string name="natural_name">Natural History Museum</string>
    <string name="natural_address">Pohjoinen Rautatiekatu 13, Helsinki</string>
    <string name="natural_desc">The Finnish Natural History Museum’s exhibitions show the diversity of nature. The "Finnish Nature" exhibition offers a fascinating journey through Finland from the southern coast to the northern fells.The ”History of Life” exhibition presents the course of the evolution from the Big Bang to dinosaurs and larger mammals of the Ice Age. Through the exhibition ”World Nature” the visitor is taken on an exploration excursion that begins from the polar areas and ends in the tropical warmth. The secrets of the bones are introduced in the exhibition ”Story of the Bones”. The "Change in the Air" exhibition presents the research on climate change conducted at the University of Helsinki. Museum shop and café</string>
    <string name="natural_url">https://www.luomus.fi/en/natural-history-museum</string>
    <string name="technology_name">Museum of Technology</string>
    <string name="technology_address">Viikintie 1, Helsinki</string>
    <string name="technology_desc">The museum of Technology presents the history of technology and industry as a story about Finland and the Finns – bringing the stories to life. It is the only general museum of technology in Finland. </string>
    <string name="technology_url">http://tekniikanmuseo.fi/in-english/</string>
    <string name="Gaijin_name">Gaijin</string>
    <string name="Gaijin_address">Bulevardi 6, Helsinki</string>
    <string name="gaijin_desc">Restaurant Gaijin is Tomi Björck and Matti Wikberg\’s second restaurant. Gaijin takes you on a journey to North Asia. Located in an excellent spot on the corner of Bulevardi and Yrjönkatu, the restaurant opened its doors in April of 2011. Gaijin offers unique flavors by combining traditional Japanese and Korean dishes with dishes from the North of China, in a modern way. The restaurant’s facilities are suitable for various kinds of events and gatherings. The dining room has a warm intimate atmosphere suitable for a private dining experience, whilst the bar is a relaxed lounge area with long communal tables and a sunny terrace which offers something for everyone. Irasshaimase\! That means welcome in Japanese</string>
    <string name="gaijin_url">http://www.gaijin.fi/</string>
    <string name="Juuri_name">Juuri</string>
    <string name="Juuri_desc">We want you to enjoy being our guest and to leave in good spirits. Our recipe is simple: we do things right in the kitchen, we respect the raw materials, we want to exceed expectations and we delight in our own work. The result is food rooted in enjoyment.</string>
    <string name="Juuri_address">Korkeavuorenkatu 27, Helsinki</string>
    <string name="Juuri_url">http://juuri.fi/en/</string>
    <string name="Kuu_name">Restaurant Kuu</string>
    <string name="Kuu_desc">Restaurant Kuu, or "the Moon" in english, was founded in 1966 with an eye above the clouds. Since the beginning the atmosphere has been described as reminiscent of a continental bistro. Many of our neighbourhood clientele are second generation regulars and we look forward to welcoming the third generation to Kuu as well.</string>
    <string name="Kuu_address">Töölönkatu 27, Helsinki</string>
    <string name="Kuu_url">https://www.ravintolakuu.fi/en/frontpage</string>
    <string name="Sandro_name">Sandro Kallio</string>
    <string name="Sandro_desc">We want to serve you a plate full of happiness, natural ingredients that are in season, food that will leave you smiling for the rest of the day.</string>
    <string name="Sandro_address">Kolmas linja 17, Helsinki</string>
    <string name="Sandro_url">http://www.sandro.fi/en/home/</string>
    <string name="aarikka_name">Aarikka Shop</string>
    <string name="aarikka_address">Pohjoisesplanadi 2, Helsinki</string>
    <string name="aarikka_desc">Aarikka Oy is a family business founded in 1954. The company designs and manufactures design products, jewellery and decorative items mainly in wood. Each product is a unique item handmade in Finland using Finnish materials.</string>
    <string name="aarikka_url">http://www.aarikka.com/en/</string>
    <string name="iittala_name">Iittala Store</string>
    <string name="iittala_address">Pohjoisesplanadi 23, Helsinki</string>
      <string name="map">Map</string>
    <string name="webpage">Webpage</string>
</resources>