<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.helsinkitourapp.PlacesDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/detailed_text_padding">

        <ImageView
            android:id="@+id/detailed_image"
            style="@style/ImageStyle"
            android:layout_width="@dimen/detailed_image_width"
            android:layout_height="@dimen/detailed_image_height"
            android:layout_gravity="center_horizontal"
            tools:src="@drawable/cathedral" />

        <TextView
            android:id="@+id/detailed_name"
            style="@style/BigTextStyle"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/list_marginLeft"
            android:textAlignment="center"
            tools:text="@string/Helsinki_cathedral_name" />

        <TextView
            android:id="@+id/detailed_address"
            style="@style/DetailedTextStyle"
            android:layout_marginTop="0dp"
            tools:text="@string/Helsinki_cathedral_address" />

        <TextView
            android:id="@+id/detailed_desc"
            style="@style/DetailedTextStyle"
            tools:text="@string/Helsinki_cathedral_desc" />

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_marginLeft">

            <LinearLayout
                android:id="@+id/link_webpage"
                style="@style/DetailedIconStyle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_link_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/webpage" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/link_map"
                style="@style/DetailedIconStyle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_map_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/map" />

            </LinearLayout>

             </LinearLayout>

    </LinearLayout>
</ScrollView>